<resources>
    <string name="app_name">Chore-Dojo24</string>
    <string name="MktBttn">Marketplace</string>
    <string name="DshBttn">Dashboard</string>
    <string name="PflBttn">Profile</string>
    <string name="HusBttn">Household</string>
    <string name="ChildBttn">Add Child</string>
    <string name="AddChild">Child Name</string>
    <string name="ChildList">Child List</string>
    <string name="parent_marketplace_title_txt">Marketplace Assignments:</string>
    <string name="task_inp_txt">Task:</string>
    <string name="reward_inp_txt">Reward:</string>
    <string name="due_date_inp_txt">Due:</string>
    <string name="btn_add_task_txt">Add Assignment</string>
    <string name="task_remove_input_txt">Task:</string>
    <string name="btn_remove_txt">Remove Assignment</string>
    <string name="parentProfileTitle">Parent Profile</string>
    <string name="momName">Marie (Mom)</string>
    <string name="choreHistoryTitle">Chore History (children)</string>
    <string name="choreHistory">Timmy:\n- Do dishes (COMPLETE - 2/25/24 6:45 PM)\n- Clean room (COMPLETE - 2/27/24 4:10 PM)\n- Sweep (COMPLETE - 2/28/24 7:25 PM)\n...\n\nAmelia:\n- Fold clothes (COMPLETE - 2/24/24 10:02 AM)\n- Organize pantry (COMPLETE - 2/25/24 5:22 PM)\n- Mop kitchen floor (COMPLETE - 2/28/24 3:24 PM)\n...</string>
    <string name="changeEmail">Email: mariem1974@gmail.com</string>
    <string name="changeInfo">Add Child\nChange Email\nChange Password</string>
    <string name="username_txt">Username:</string>
    <string name="username_inp_txt">Username:</string>
    <string name="password_txt">Password:</string>
    <string name="password_inp_txt">Password:</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_btn_txt">Register</string>
    <string name="Registration_Title">Register New Account:</string>
    <string name="register_instructions_txt">Please fill out all fields:</string>
    <string name="name_txt">Name:</string>
    <string name="email_txt">Email:</string>
    <string name="register_txt">Register</string>

</resources>