<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/parent_marketplace_title"
        android:layout_width="294dp"
        android:layout_height="86dp"
        android:layout_marginTop="56dp"
        android:text="@string/parent_marketplace_title_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ListView
        android:id="@+id/task_list"
        android:layout_width="328dp"
        android:layout_height="262dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_marketplace_title"></ListView>

    <EditText
        android:id="@+id/task_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/task_inp_txt"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_list" />

    <EditText
        android:id="@+id/reward_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/reward_inp_txt"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/task_input"
        app:layout_constraintTop_toBottomOf="@+id/task_input" />

    <EditText
        android:id="@+id/due_date_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/due_date_inp_txt"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/reward_input"
        app:layout_constraintTop_toBottomOf="@+id/reward_input" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn_add_task_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_date_input" />

    <EditText
        android:id="@+id/task_remove_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/task_remove_input_txt"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_list" />

    <Button
        android:id="@+id/btn_remove_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_remove_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_remove_input" />

    <Button
        android:id="@+id/Dashboard"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:text="@string/DshBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Household"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/Household"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:text="@string/HusBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/Marketplace"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:text="@string/MktBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Household"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:text="@string/PflBttn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/Marketplace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

</androidx.constraintlayout.widget.ConstraintLayout>